Fixed alignment problems

--- a/src/assets/css/SingleForm.module.css
+++ b/src/assets/css/SingleForm.module.css
@@ -1,33 +1,37 @@
 .form {
-    position: relative;
+  /* position: relative; */
 
-    width: 40%;
-    margin: 0 auto;
-    display: flex;
-    flex-direction: column;
-    flex-wrap: wrap;
-    /* justify-content: center;
-    align-items: center; */
+  width: 100%;
+  /* margin: 0 1rem; */
+  display: flex;
+  /* flex-direction: row; */
+  /* flex-wrap: wrap; */
+  justify-content: center;
+  /* align-items: center; */
 }
 .button {
-    position: absolute;
-    top: 0px;
-    left: 800px;
-    display: flex;
-
-    /* margin: 0 auto; */
+  /* position: absolute; */
+  top: 0px;
+  /* left: 800px; */
+  justify-content: end;
+  /* margin: 0 auto; */
+}
+.searchBar {
+  width: 25rem;
 }
 .searchIcon {
-    margin-left: 4px;
-    padding-right: 10px;
+  margin-left: 4px;
+  padding-right: 10px;
 }
 .button2 {
-    border-radius: 40px;
-    position: fixed;
-    top: 860px;
-    left: 1865px;
-    z-index: 2;
+  border-radius: 40px;
+  position: fixed;
+  /* used percent insteam of px */
+  top: 80%;
+  /* aligned search relative to right side */
+  right: -18px;
+  z-index: 2;
 }
 .button2:hover {
-    background-color: green;
+  background-color: green;
 }
